# remotefs

./: .gitignore  Cargo.toml  LICENSE  PRD.md  Taskfile.yml  build.rs  docker-compose.yml
.agents/skills/coding-guidelines/: SKILL.md
.agents/skills/coding-guidelines/agents/: openai.yaml
.agents/skills/coding-guidelines/references/: coding-guidelines.md
crates/rfs/: Cargo.toml
crates/rfs-common/: Cargo.toml  build.rs
crates/rfs-common/src/: cas.rs  config.rs  control_protocol.rs  diagnostics.rs  lib.rs  logging.rs  reapi.rs  state.rs  upload.rs
crates/rfs-common/src/state/: schema.sql
crates/rfs-common/tests/: cas_prerequisites.rs  state_integration.rs
crates/rfs/src/: bootstrap_upload.rs  daemon_client.rs  lib.rs  main.rs
crates/rfs/src/cli/: mod.rs
crates/rfs/tests/: architecture_boundaries.rs  cli.rs  prerequisites.rs  upload_integration.rs
crates/rfsd/: Cargo.toml
crates/rfsd/src/: control_service.rs  fs.rs  fuse.rs  lib.rs  main.rs
crates/rfsd/tests/: daemon_integration.rs  readonly_e2e.rs  readonly_integration.rs
docs/: coding-guidelines.md  implementation-plan-draft-session.md  implementation-plan.md  protos.md  step3.2.md  step4.1.md  technical-design.md
proto/remotefs/control/v1/: control.proto
src/: cas.rs  cli.rs  config.rs  control.rs  digest.rs  fs.rs  lib.rs  reapi.rs  state.rs  tree.rs  upload.rs
src/cli/: mod.rs
src/daemon/: mod.rs
src/shared/: cas.rs  control.rs  digest.rs  error_context.rs  mod.rs  reapi.rs  state.rs  tree.rs  upload.rs
tests/: cas_prerequisites.rs  cli.rs  daemon_integration.rs  state_integration.rs  upload_integration.rs
tests/fixtures/tree-roundtrip/: README.txt
tests/fixtures/tree-roundtrip/links/: absolute  escaping
