[package]
name = "remotefs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime and gRPC
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
async-trait = "0.1"

# CLI/config/logging
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors and utilities
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
walkdir = "2.5"

# Daemon/FUSE/state
fuser = { version = "0.14", optional = true }
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.11"
prost-build = "0.12"
