[workspace]
members = [
    "crates/rfs",
    "crates/rfs-common",
    "crates/rfsd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
fuser = { version = "0.14", default-features = false, features = ["abi-7-31"] }
libc = "0.2"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.8", features = ["v4"] }
