[package]
name = "rfs-common"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
hex = "0.4"
libc = "0.2"
prost.workspace = true
prost-types.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir = "2.5"

[build-dependencies]
anyhow.workspace = true
prost-build = "0.12"
tonic-build = "0.11"

[dev-dependencies]
tempfile.workspace = true
