[package]
name = "rfs"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rfs-common = { path = "../rfs-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
