[package]
name = "rfsd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap = { version = "4.5", features = ["derive"] }
prost-types.workspace = true
rfs-common = { path = "../rfs-common" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
