[package]
name = "rfsd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap = { version = "4.5", features = ["derive"] }
fuser.workspace = true
libc.workspace = true
prost-types.workspace = true
rfs-common = { path = "../rfs-common" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
tempfile.workspace = true
